--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,8 @@ body {
 .outer-section {
   padding: 2rem;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: center;
   align-items: center;
 }
 
@@ -97,6 +98,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   padding: 1rem;
   background-color: #ff7171;
   text-align: center;
