--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,7 @@
 * {
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
 }
-
-body {
-  font-family: "Oswald", sans-serif;
-}
-
 .navbar {
   background-color: #ff7171;
   display: flex;
@@ -15,81 +9,99 @@ body {
   align-items: center;
   height: 5rem;
 }
-
-.navbar ul {
-  list-style-type: none;
-  display: flex;
-  align-items: center;
-}
-
 .navbar ul li {
-  margin: 0 1rem;
+  /*nav-bar items */
+
+  display: inline;
+  list-style-type: none;
+  padding: 1rem;
   font-weight: 600;
   font-size: 1.2rem;
+  margin: 0 1rem 0 1rem;
 }
-
 .fa-reorder {
   font-size: 2rem;
 }
-
 .row {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  background-image: linear-gradient(
+    to right bottom,
+    #fff6af,
+    #ffdfa7,
+    #ffc9b5,
+    #ffb9d0,
+    #ffb4ee
+  );
 }
-
+.col1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .col {
+  width: 50%;
+  height: 90vh;
   text-align: center;
 }
-
 .col .desc {
-  text-align: center;
-  margin: 1rem;
+  display: block;
+  font-family: "Oswald", sans-serif;
+  text-align: left;
+  margin-left: 10rem;
+  width: 70%;
 }
-
+.col2 {
+  /* object-fit: cover; Scale the image to cover the entire container */
+  display: block;
+  overflow: hidden;
+}
 .col2 img {
-  max-width: 100%;
-  height: auto;
+  position: relative;
+  height: 50vh;
+  width: 31rem;
+  /* top: -20rem; */
+  left: -6rem;
+  zoom: 2;
 }
-
 .hero-heading {
+  display: block;
   font-size: 3rem;
   font-weight: 500;
+  font-family: "Oswald", sans-serif;
   text-transform: uppercase;
   letter-spacing: 1rem;
   margin-bottom: 2rem;
 }
-
 .button-div {
-  text-align: center;
+  text-align: left;
+  margin-left: 10rem;
 }
-
 .click-me {
   background-color: #ff7171;
   border: none;
   color: white;
   margin-top: 2rem;
-  padding: 0.9rem 4rem;
+  padding: 0.9rem 4rem 0.9rem 4rem;
 }
 
-.second-block {
-  display: flex;
-  flex-direction: column;
+.img1 img {
+  width: 240px;
+  height: 200px;
 }
-
-.img1 img,
 .img2 img {
-  max-width: 100%;
-  height: auto;
+  width: 260px;
+  height: 420px;
 }
 
 .outer-section {
   padding: 2rem;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: right;
   align-items: center;
+  width: 50%;
 }
-
 .outer-section img {
   padding: 0.5rem;
 }
@@ -98,24 +110,36 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   padding: 1rem;
-  background-color: #ff7171;
-  text-align: center;
 }
-
 .sec-row .heading {
   font-size: 1rem;
+  font-family: "Oswald", sans-serif;
 }
-
 .sec-row .lower-heading {
   font-size: 3rem;
+  font-family: "Oswald", sans-serif;
   letter-spacing: 0.3rem;
   font-weight: 500;
 }
-
 .sec-row .click {
   padding-top: 1rem;
+  font-family: "Oswald", sans-serif;
+}
+.sec-row {
+  background-color: #ff7171;
+}
+.second-block {
+  display: flex;
+  flex-direction: row;
+  background-image: linear-gradient(
+    to right bottom,
+    #fff6af,
+    #ffdfa7,
+    #ffc9b5,
+    #ffb9d0,
+    #ffb4ee
+  );
 }
 
 .footer {
@@ -123,5 +147,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 3rem;
+  height: 1.5rem;
+  opacity: 100px;
 }
